<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ceisutb01.ahogadopaisesdelmundo.MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9">

        <LinearLayout
            android:id="@+id/Vocales"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/buttonA"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="A"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonE"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="E"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonI"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="I"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonO"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="O"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonU"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="U"
                android:textSize="17sp" />

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98">

        <LinearLayout
            android:id="@+id/LetrasABC"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/buttonB"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="B"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="C"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonD"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="D"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonF"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="F"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonG"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="G"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonH"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="H"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonJ"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="J"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonK"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="K"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonL"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="L"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonM"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="M"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonN"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="N"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonP"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="P"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonQ"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Q"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonR"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="R"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonS"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="S"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonT"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="T"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonV"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="V"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonW"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="W"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonX"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="X"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonY"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Y"
                android:textSize="17sp" />

            <Button
                android:id="@+id/buttonZ"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Z"
                android:textSize="17sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/Puntos"
        android:layout_width="124dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:text="@string/puntos_0"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Vidas"
        android:layout_width="81dp"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:text="@string/vidas_7"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ForLetter"
        android:layout_width="347dp"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:contextClickable="false"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88">

    </LinearLayout>

    <Button
        android:id="@+id/Ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="320dp"
        android:text="Ayuda"
        app:layout_constraintBottom_toTopOf="@+id/VenI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/youlosetext"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Menu"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="320dp"
        android:text="@string/menu"
        app:layout_constraintEnd_toStartOf="@+id/youlosetext"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/VenI"
        android:layout_width="358dp"
        android:layout_height="335dp"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/editbox_dropdown_light_frame" android:contentDescription="TODO" />

    <TextView
        android:id="@+id/youwintext"
        android:layout_width="247dp"
        android:layout_height="178dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:text="@string/you_win"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/youlosetext"
        android:layout_width="247dp"
        android:layout_height="178dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="serif"
        android:text="@string/you_lose"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/Menu2"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="268dp"
        android:text="@string/menu"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/youwintext"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Siguente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="268dp"
        android:text="@string/sigueinte"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Menu2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Reiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="268dp"
        android:text="Reiniciar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Menu2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Prueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="167dp"
        android:layout_marginStart="149dp"
        android:layout_marginTop="53dp"
        android:text="nada"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
